# ESP32_HTTP_Example

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  UART_example.cpp  bla.hpp  ca.crt  hex_html_page.h  main.cpp  module_HTTP.cpp  module_HTTP.h  module_MQTT.cpp  module_MQTT.h
main/certs/: cacert.pem  prvtkey.pem
